# Superalgos

./: -g  .dockerignore  .env  .env.example  .env.local  .env.matias  .eslintignore  .eslintrc.json  .git-for-windows-updater  .gitattributes  .gitignore  .gitmodules  0.PERIODICALLY_RUN_THIS.txt  AAArtudito-Trading-Bot.sln  AAArtudito.njsproj  AABruce-Indicator-Bot.sln  AABruce.njsproj  AABruce.sln  AACharly-Sensor-Bot.sln  AACharly.njsproj  AACharly.sln  AACloudPlatform.njsproj  AACloudPlatform.sln  AAGauss-Indicator-Bot.sln  AAMariam-Plotter.njsproj  AAMariam-Plotter.sln  AAMariam.njsproj  AAMariam.sln  AAOlivia-Indicator.Bot.sln  AAOlivia-Plotter.njsproj  AAOlivia-Plotter.sln  AAOlivia.njsproj  AAOlivia.sln  AATom.njsproj  AATom.sln  AAWebPlatform.njsproj  AAWebPlatform.sln  AccumulatedVolumeBar.js  AggregatedOrdersArray.js  Animation.js  (+331 more)
.github/: CODEOWNERS  dependabot.yml  stale.yml
.husky/: pre-commit
.mockHttpResponses/: jqueryUIResp.json
.mocks/: simple-git.js
.tests/: Environment.test.js
.testsCoverage/: clover.xml  coverage-final.json  lcov.info
12-hs-Market/: Interval.js  run.js
24-hs-Market/: Interval Executor.js  Interval.js  run.js
AABrowserAPI/: API.js  BotCode.js  CopySimulator.js  TeamSetup.js  UserAuthentication.js
All-Time-High/: Interval.js
App-Management/: AppManagementRoot.js
Azure/: azure-storage.blob.js  azure-storage.common.js  azure-storage.file.js
BackendServers/: .env  server.js  (+5 more)
Reports/RnD/TradeAnalysis/TradeAnalysis/: CMakeLists.txt  Line.cpp  Line.h  SummaryLine.cpp  SummaryLine.h  TradeAnalysis.cpp  TradeAnalysis.h
(+54803 files in other folders)
